[package]
name = "fast-awk"
version = "0.1.0"
edition = "2021"
authors = ["Rust Search Tools Team"]
description = "Ultra-fast AWK-compatible text processor with SIMD optimization"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/your-username/rust_search_tools_for_linux"
repository = "https://github.com/your-username/rust_search_tools_for_linux"
readme = "../README.md"
keywords = ["awk", "text-processing", "log-analysis", "performance", "simd"]
categories = ["command-line-utilities", "text-processing", "parsing"]

[[bin]]
name = "fawk"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.0", features = ["derive", "color"] }
thiserror = "1.0"
memchr = "2.5"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
rayon = "1.8"
csv = "1.3"
atty = "0.2"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"