[package]
name = "fast-du"
version = "0.1.0"
edition = "2021"
authors = ["Search Tools Team"]
description = "Parallel disk usage analyzer - modern du alternative"
license = "MIT OR Apache-2.0"

[[bin]]
name = "fdu"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rayon = { workspace = true }
colored = { workspace = true }
tabled = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
num_cpus = "1.16"