[package]
name = "fast-grep"
version = "0.1.0"
edition = "2021"
authors = ["Search Tools Team"]
description = "Ultra-fast parallel text search tool - modern grep alternative"
license = "MIT OR Apache-2.0"

[[bin]]
name = "fgrep"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
aho-corasick = { workspace = true }
memchr = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
memmap2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
crossbeam = { workspace = true }
content_inspector = { workspace = true }
atty = "0.2"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.0"