[package]
name = "fast-ls"
version = "0.1.0"
edition = "2021"
authors = ["Search Tools Team"]
description = "Enhanced directory listing tool - modern ls alternative"
license = "MIT OR Apache-2.0"

[[bin]]
name = "fls"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
colored = { workspace = true }
tabled = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num_cpus = "1.16"